tests/snapshots/run_wpt_conformance__litert_l2Pool2d_float32_4D_tensor_options_dilations.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
l2Pool2d.https.any.js l2Pool2d float32 4D tensor options.dilations, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    l2Pool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [l2Pool2dOutput] = l2Pool2d(l2Pool2dInput, dilations=[2, 2], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=[3, 3]);
  }

  outputs { l2Pool2dOutput; }
}
